--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
     <div class="box">
     <img src="user.png" class="user">
 
-        <h1>Register Here</h1>
+        <h1>Register here</h1>
 
         <form name="myform2"  action="register.php" method="POST" required="">
 
